--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SADSANGA – Sufism & Spiritual Awakening</title>
+  <title>সদসঙ্গ – SADSANGA | Sufism & Spiritual Awakening</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="SADSANGA – A spiritual sanctuary for Sufism, poetry, music, and soulful companionship." />
+  <meta name="keywords" content="SADSANGA, Sufism, Spiritual Awakening, Bengali Poetry, Sufi Music, Companion Connect" />
+  <meta name="author" content="Irfan Hossain" />
+  <meta name="robots" content="index, follow" />
+  
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
