--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       padding: 2rem;
     }
     .featured, .section-box {
-      background: #fff;
+      background: #1a75ff;
       border: 1px solid #ddd;
       padding: 1rem;
       border-radius: 8px;
