--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <section id="motivation">
     <h2>📚 Motivation</h2>
     <div class="section-box">
-      <p>https://www.freepik.com/free-vector/sufi-whirling-dance_794789.htm#fromView=keyword&page=1&position=1&uuid=3ec88f0e-9ca4-4595-8e4c-65cc08cf2e53&query=Sufism</p>
+      <p>Quotes and self-help articles will be posted here. Admin will be able to update with text and images.</p>
     </div>
   </section>
 
