--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
   <section id="motivation">
     <h2>📚 Motivation</h2>
     <div class="section-box">
-      <p>Quotes and self-help articles will be posted here. Admin will be able to update with text and images.</p>
+      <p>Paste any YouTube/SoundCloud/Spotify link below and it will be embedded:</p>
+      <iframe src="https://youtu.be/4ZauVdPPBdQ?si=Zf1HM4MMhCEPJDoG" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
 
@@ -103,7 +104,7 @@
     <h2>🎵 Music & Media</h2>
     <div class="section-box">
       <p>Paste any YouTube/SoundCloud/Spotify link below and it will be embedded:</p>
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/5y1XbBWB5vU?si=OaeujalGH-HXfcUt" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
 
